# linglong-store

./: CMakeLists.txt  README.md  README_zh_CN.md
debian/: changelog  control  copyright  postinst
ll-installer/: CMakeLists.txt  installer-dialog.cpp  installer-dialog.h  main.cpp  space.linglong.Installer.desktop
rpm/: linglong-store.spec
